--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -41,6 +41,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      ollama:
+        condition: service_started
     environment:
       # Configuration n8n
       - N8N_HOST=${N8N_HOST}
@@ -117,6 +119,48 @@ services:
         max-size: "10m"
         max-file: "3"
 
+  ollama:
+    image: ollama/ollama:latest
+    container_name: ollama-prod
+    restart: unless-stopped
+    ports:
+      - "11434:11434"
+    environment:
+      # OPTIMISATIONS PERFORMANCES - Production
+      - OLLAMA_KEEP_ALIVE=1h                # Garde le modèle plus longtemps
+      - OLLAMA_NUM_PARALLEL=4                # Plus de requêtes simultanées
+      - OLLAMA_MAX_LOADED_MODELS=1           # Charge 1 seul modèle à la fois
+      - OLLAMA_FLASH_ATTENTION=1             # Active l'attention rapide
+      - OLLAMA_NUM_GPU=1                     # Si GPU disponible
+      - OLLAMA_NUM_THREAD=8                  # Plus de threads CPU
+    volumes:
+      - ollama_data:/root/.ollama
+    networks:
+      - n8n-network
+    deploy:
+      resources:
+        limits:
+          cpus: '4'
+          memory: 8G
+        reservations:
+          cpus: '2'
+          memory: 4G
+          # Décommentez si vous avez un GPU NVIDIA
+          # devices:
+          #   - driver: nvidia
+          #     count: all
+          #     capabilities: [gpu]
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:11434/api/tags"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
   caddy:
     # Image Caddy avec module rate limiting compilé
     build:
@@ -152,6 +196,8 @@ volumes:
   n8n_data:
     driver: local
   redis_data:
+    driver: local
+  ollama_data:
     driver: local
   caddy_data:
     driver: local
