--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -102,22 +102,29 @@ services:
       - "11434:11434"
     environment:
       # OPTIMISATIONS PERFORMANCES
-      - OLLAMA_KEEP_ALIVE=30m              # Garde le modèle en mémoire 30 min
-      - OLLAMA_NUM_PARALLEL=2              # Nombre de requêtes simultanées
-      - OLLAMA_MAX_LOADED_MODELS=1         # Charge 1 seul modèle à la fois
-      - OLLAMA_FLASH_ATTENTION=1           # Active l'attention rapide
+      - OLLAMA_KEEP_ALIVE=1h                # Garde le modèle plus longtemps
+      - OLLAMA_NUM_PARALLEL=4                # Plus de requêtes simultanées
+      - OLLAMA_MAX_LOADED_MODELS=1           # Charge 1 seul modèle à la fois
+      - OLLAMA_FLASH_ATTENTION=1             # Active l'attention rapide
+      - OLLAMA_NUM_GPU=1                     # Si GPU disponible
+      - OLLAMA_NUM_THREAD=8                  # Plus de threads CPU
     volumes:
       - ollama_data:/root/.ollama
     networks:
       - n8n-network
-    # Décommentez si vous avez un GPU NVIDIA
-    # deploy:
-    #   resources:
-    #     reservations:
-    #       devices:
-    #         - driver: nvidia
-    #           count: all
-    #           capabilities: [gpu]
+    deploy:
+      resources:
+        limits:
+          cpus: '4'
+          memory: 8G
+        reservations:
+          cpus: '2'
+          memory: 4G
+          # Décommentez si vous avez un GPU NVIDIA
+          # devices:
+          #   - driver: nvidia
+          #     count: all
+          #     capabilities: [gpu]
 
 networks:
   n8n-network:
