--- a/docker/env.example
+++ b/docker/env.example
@@ -54,6 +54,18 @@ N8N_CORS_ALLOW_ORIGIN=*
 # N8N_EDITOR_BASE_URL=https://votre-domaine.com
 # WEBHOOK_URL=https://votre-domaine.com
 
+# ============================================
+# CONFIGURATION CLOUDFLARE TUNNEL (Alternative)
+# ============================================
+# Si vous utilisez Cloudflare Tunnel au lieu de Caddy :
+# N8N_HOST=n8n.votre-domaine.com
+# N8N_PROTOCOL=https
+# N8N_EDITOR_BASE_URL=https://n8n.votre-domaine.com
+# WEBHOOK_URL=https://n8n.votre-domaine.com
+# 
+# Voir docs/CONFIGURER_CLOUDFLARE_TUNNEL.md pour la configuration complète
+# Script d'aide : scripts/setup-cloudflare-tunnel.ps1
+
 # Les mêmes variables PostgreSQL s'appliquent (voir ci-dessus)
 # Changez POSTGRES_PASSWORD pour un mot de passe fort en production
 
@@ -91,7 +103,10 @@ N8N_CORS_ALLOW_ORIGIN=*
 # ============================================
 # 1. En production, utilisez des mots de passe forts
 # 2. Activez toujours l'authentification basique en production
-# 3. Configurez HTTPS via Caddy automatiquement
+# 3. Configurez HTTPS via Caddy OU Cloudflare Tunnel
+#    - Caddy : Nécessite un domaine avec DNS configuré
+#    - Cloudflare Tunnel : Pas besoin d'ouvrir de ports, gratuit
 # 4. Changez tous les mots de passe par défaut
 # 5. Ne partagez jamais votre fichier .env
+# 6. Si vous utilisez Cloudflare Tunnel, vous n'avez pas besoin de Caddy
 
